fix off-center cards

--- a/app/src/GameDetails/styles.module.scss
+++ b/app/src/GameDetails/styles.module.scss
@@ -19,8 +19,6 @@
 @media (min-width: 576px) {
   .container {
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
   }
   .left {
     flex: 1;
