--- a/app/src/global.scss
+++ b/app/src/global.scss
@@ -1,5 +1,10 @@
 @import "variables.scss";
 
+* {
+  padding: 0;
+  margin: 0;
+}
+
 li {
   list-style: none;
   margin: 0;
